Add Doodle Jump game implementation and initial game rules documentation
- Implemented the Doodle Jump game logic in jump12.py, including player movement, platform generation, and collision detection.
- Added special platforms and springs with unique behaviors.
- Created a scoring system based on player movement and platform interactions.
- Established a game reset function to restart the game upon player request.
- Documented game rules and structure in game rule.md, outlining gameplay mechanics, controls, and development progress.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,144 @@ config.ini
 # System specific
 .DS_Store
 Thumbs.db
+class13/images/License.txt
+class13/images/Preview.png
+class13/images/Sample.png
+class13/images/Tilesheet.txt
+class13/images/Tiny Dungeon (base pack).url
+class13/images/Visit Kenney.url
+class13/images/Visit Patreon.url
+class13/images/Tilemap/tilemap_packed.png
+class13/images/Tilemap/tilemap.png
+class13/images/Tiles/tile_0000.png
+class13/images/Tiles/tile_0001.png
+class13/images/Tiles/tile_0002.png
+class13/images/Tiles/tile_0003.png
+class13/images/Tiles/tile_0004.png
+class13/images/Tiles/tile_0005.png
+class13/images/Tiles/tile_0006.png
+class13/images/Tiles/tile_0007.png
+class13/images/Tiles/tile_0008.png
+class13/images/Tiles/tile_0009.png
+class13/images/Tiles/tile_0010.png
+class13/images/Tiles/tile_0011.png
+class13/images/Tiles/tile_0012.png
+class13/images/Tiles/tile_0013.png
+class13/images/Tiles/tile_0014.png
+class13/images/Tiles/tile_0015.png
+class13/images/Tiles/tile_0016.png
+class13/images/Tiles/tile_0017.png
+class13/images/Tiles/tile_0018.png
+class13/images/Tiles/tile_0019.png
+class13/images/Tiles/tile_0020.png
+class13/images/Tiles/tile_0021.png
+class13/images/Tiles/tile_0022.png
+class13/images/Tiles/tile_0023.png
+class13/images/Tiles/tile_0024.png
+class13/images/Tiles/tile_0025.png
+class13/images/Tiles/tile_0026.png
+class13/images/Tiles/tile_0027.png
+class13/images/Tiles/tile_0028.png
+class13/images/Tiles/tile_0029.png
+class13/images/Tiles/tile_0030.png
+class13/images/Tiles/tile_0031.png
+class13/images/Tiles/tile_0032.png
+class13/images/Tiles/tile_0033.png
+class13/images/Tiles/tile_0034.png
+class13/images/Tiles/tile_0035.png
+class13/images/Tiles/tile_0036.png
+class13/images/Tiles/tile_0037.png
+class13/images/Tiles/tile_0038.png
+class13/images/Tiles/tile_0039.png
+class13/images/Tiles/tile_0040.png
+class13/images/Tiles/tile_0041.png
+class13/images/Tiles/tile_0042.png
+class13/images/Tiles/tile_0043.png
+class13/images/Tiles/tile_0044.png
+class13/images/Tiles/tile_0045.png
+class13/images/Tiles/tile_0046.png
+class13/images/Tiles/tile_0047.png
+class13/images/Tiles/tile_0048.png
+class13/images/Tiles/tile_0049.png
+class13/images/Tiles/tile_0050.png
+class13/images/Tiles/tile_0051.png
+class13/images/Tiles/tile_0052.png
+class13/images/Tiles/tile_0053.png
+class13/images/Tiles/tile_0054.png
+class13/images/Tiles/tile_0055.png
+class13/images/Tiles/tile_0056.png
+class13/images/Tiles/tile_0057.png
+class13/images/Tiles/tile_0058.png
+class13/images/Tiles/tile_0059.png
+class13/images/Tiles/tile_0060.png
+class13/images/Tiles/tile_0061.png
+class13/images/Tiles/tile_0062.png
+class13/images/Tiles/tile_0063.png
+class13/images/Tiles/tile_0064.png
+class13/images/Tiles/tile_0065.png
+class13/images/Tiles/tile_0066.png
+class13/images/Tiles/tile_0067.png
+class13/images/Tiles/tile_0068.png
+class13/images/Tiles/tile_0069.png
+class13/images/Tiles/tile_0070.png
+class13/images/Tiles/tile_0071.png
+class13/images/Tiles/tile_0072.png
+class13/images/Tiles/tile_0073.png
+class13/images/Tiles/tile_0074.png
+class13/images/Tiles/tile_0075.png
+class13/images/Tiles/tile_0076.png
+class13/images/Tiles/tile_0077.png
+class13/images/Tiles/tile_0078.png
+class13/images/Tiles/tile_0079.png
+class13/images/Tiles/tile_0080.png
+class13/images/Tiles/tile_0081.png
+class13/images/Tiles/tile_0082.png
+class13/images/Tiles/tile_0083.png
+class13/images/Tiles/tile_0084.png
+class13/images/Tiles/tile_0085.png
+class13/images/Tiles/tile_0086.png
+class13/images/Tiles/tile_0087.png
+class13/images/Tiles/tile_0088.png
+class13/images/Tiles/tile_0089.png
+class13/images/Tiles/tile_0090.png
+class13/images/Tiles/tile_0091.png
+class13/images/Tiles/tile_0092.png
+class13/images/Tiles/tile_0093.png
+class13/images/Tiles/tile_0094.png
+class13/images/Tiles/tile_0095.png
+class13/images/Tiles/tile_0096.png
+class13/images/Tiles/tile_0097.png
+class13/images/Tiles/tile_0098.png
+class13/images/Tiles/tile_0099.png
+class13/images/Tiles/tile_0100.png
+class13/images/Tiles/tile_0101.png
+class13/images/Tiles/tile_0102.png
+class13/images/Tiles/tile_0103.png
+class13/images/Tiles/tile_0104.png
+class13/images/Tiles/tile_0105.png
+class13/images/Tiles/tile_0106.png
+class13/images/Tiles/tile_0107.png
+class13/images/Tiles/tile_0108.png
+class13/images/Tiles/tile_0109.png
+class13/images/Tiles/tile_0110.png
+class13/images/Tiles/tile_0111.png
+class13/images/Tiles/tile_0112.png
+class13/images/Tiles/tile_0113.png
+class13/images/Tiles/tile_0114.png
+class13/images/Tiles/tile_0115.png
+class13/images/Tiles/tile_0116.png
+class13/images/Tiles/tile_0117.png
+class13/images/Tiles/tile_0118.png
+class13/images/Tiles/tile_0119.png
+class13/images/Tiles/tile_0120.png
+class13/images/Tiles/tile_0121.png
+class13/images/Tiles/tile_0122.png
+class13/images/Tiles/tile_0123.png
+class13/images/Tiles/tile_0124.png
+class13/images/Tiles/tile_0125.png
+class13/images/Tiles/tile_0126.png
+class13/images/Tiles/tile_0127.png
+class13/images/Tiles/tile_0128.png
+class13/images/Tiles/tile_0129.png
+class13/images/Tiles/tile_0130.png
+class13/images/Tiles/tile_0131.png
